--- a/docs/template/front_page.tex
+++ b/docs/template/front_page.tex
@@ -48,7 +48,7 @@
 			\makecell[l]{\revisori}\\
 		\else\fi
 		\ifdefined\responsabili
-			\textit{Respondabili} &
+			\textit{Responsabili} &
 			\makecell[l]{\responsabili}\\
 		\else\fi
 		
