--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -12,6 +12,7 @@
 
 \settitolo{Piano di Progetto}
 \setredattori{Elia Scandaletti}
+\setresponsabili{Giovanni Cocco}
 \setdestuso{esterno}
 \setdescrizione{
 Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei costi sostenuti fino ad oggi e li confronta con i costi preventivati, in relazione agli obiettivi fissati.
@@ -19,6 +20,8 @@ Questo documento serve a tracciare l'efficienza del progetto. Tiene traccia dei 
 
 \addversione{0.0.0}{13/11/2021}{Elia Scandaletti}{Redazione}{Stesura iniziale}
 \addversione{0.0.1}{07/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento impegni secondo Verbale del 04/02/2022}
+\addversione{0.0.2}{11/02/2022}{Elia Scandaletti}{Redazione}{Aggiornamento per RTB}
+\addversione{1.0.0}{12/02/2022}{Giovanni Cocco}{Approvazione}{Approvazione per RTB}
 
 \def\pgfcalendarmonthitname#1{%
 \ifcase#1 \or Gennaio\or Febbraio\or Marzo\or Aprile\or Maggio\or Giugno\or Luglio\or Agosto\or Settembre\or Ottobre\or Novembre\or Dicembre\fi%
@@ -46,45 +49,47 @@ Prodotti necessari:
 \paragraph{Analisi dei Requisiti}
 Inizio: 01/12/2021\par
 Fine prevista: 08/02/2022\par
-Fine effettiva: TBD
+Fine effettiva: 09/02/2021
 
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Analista & 42 & TBD & 25\euro & 1050\euro & TBD \\\hline
-Verificatore & 8 & TBD & 15\euro & 120\euro & TBD \\\hline
-Totale ore: & 50 & TBD & Totale costi: & 1170\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
+Analista & 42 & 52.5 & 25\euro & 1050\euro & 1312.5\euro \\\hline
+Verificatore & 8 & 11.5 & 15\euro & 120\euro & 172.5\euro \\\hline
+Totale ore: & 50 & 64 & Totale costi: & 1170\euro & 1485 \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & +14 & \multicolumn{2}{r|}{Differenza di costo:} & +315 \\\hline
 \end{tabular}
 
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Andrea Volpe & Analista & 21 & TBD & TBD \\\hline
-Alberto Nicoletti & Analista & 21 & TBD & TBD \\\hline
-Giovanni Cocco & Verificatore & 8 & TBD & TBD \\\hline
+Andrea Volpe & Analista & 21 & 31.25  & +10.25 \\\hline
+Alberto Nicoletti & Analista & 21 & 21.25 & +0.25 \\\hline
+Giovanni Cocco & Verificatore & 8 & 7.5 & -0.5 \\\hline
+Elia Scandaletti & Verificatore & 0 & 3 & +3 \\\hline
+Raffaele Oliviero & Verificatore & 0 & 1 & +1 \\\hline
 \end{tabular}
 
 \paragraph{Analisi delle Tecnologie}
 Inizio: 01/12/2021\par
 Fine prevista: 08/02/2022\par
-Fine effettiva: TBD
+Fine effettiva: 11/02/2022
 
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Analista & 42 & TBD & 25\euro & 1050\euro & TBD \\\hline
-Verificatore & 6 & TBD & 15\euro & 90\euro & TBD \\\hline
-Totale ore: & 48 & TBD & Totale costi: & 1140\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
+Progettista & 42 & 80.5 & 25\euro & 1050\euro & 2012.5\euro \\\hline
+Verificatore & 6 & 2 & 15\euro & 90\euro & 30\euro \\\hline
+Totale ore: & 48 & 82.5 & Totale costi: & 1140\euro & 2042.5\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & +34.5 & \multicolumn{2}{r|}{Differenza di costo:} & +902.5\euro \\\hline
 \end{tabular}
 
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Matteo Galvagni & Analista & 21 & TBD & TBD \\\hline
-Federico Marchi & Analista & 21 & TBD & TBD \\\hline
-Giovanni Cocco & Verificatore & 6 & TBD & TBD \\\hline
+Matteo Galvagni & Progettista & 21 & 34.5 & +13.5 \\\hline
+Federico Marchi & Progettista & 21 & 46 & +25 \\\hline
+Giovanni Cocco & Verificatore & 6 & 2 & -4 \\\hline
 \end{tabular}
 
 \paragraph{Piano di Progetto (RTB)}
@@ -95,7 +100,7 @@ Fine effettiva: TBD
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Responsabile & 21 & TBD & 30\euro & 630\euro & TBD \\\hline
+Responsabile & 21 & 29 & 30\euro & 630\euro & 870\euro \\\hline
 Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
 Totale ore: & 24 & TBD & Totale costi: & 675\euro & TBD \\\hline
 \multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
@@ -104,8 +109,8 @@ Totale ore: & 24 & TBD & Totale costi: & 675\euro & TBD \\\hline
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Elia Scandaletti & Responsabile & 11 & TBD & TBD \\\hline
-Raffaele Oliviero & Responsabile & 10 & TBD & TBD \\\hline
+Elia Scandaletti & Responsabile & 11 & 16 & +5 \\\hline
+Raffaele Oliviero & Responsabile & 10 & 13 & +3 \\\hline
 Giovanni Cocco & Verificatore & 3 & TBD & TBD \\\hline
 \end{tabular}
 
@@ -134,29 +139,45 @@ Giovanni Cocco & Verificatore & 3 & 0.5 & -2.5 \\\hline
 \paragraph{Sviluppo Proof of Concept}
 Inizio: 23/12/2021\par
 Fine prevista: 08/02/2022\par
-Fine effettiva: TBD
+Fine effettiva: 07/02/2022
 
 Ore richieste:\\[0.5em]
 \begin{tabular}{|l|l|l||l|l|l|l|}\hline
 Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
-Programmatore & 40 & TBD & 15\euro & 600\euro & TBD \\\hline
-Verificatore & 3 & TBD & 15\euro & 45\euro & TBD \\\hline
-Totale ore: & 43 & TBD & Totale costi: & 645\euro & TBD \\\hline
-\multicolumn{2}{|r|}{Differenza di ore:} & TBD & \multicolumn{2}{r|}{Differenza di costo:} & TBD \\\hline
+Programmatore & 40 & 44 & 15\euro & 600\euro & 660\euro \\\hline
+Verificatore & 3 & 4 & 15\euro & 45\euro & 60\euro \\\hline
+Totale ore: & 43 & 48 & Totale costi: & 645\euro & 720\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & +5 & \multicolumn{2}{r|}{Differenza di costo:} & +75\euro \\\hline
 \end{tabular}
 
 Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
-Giovanni Cocco & Programmatore & 20 & TBD & TBD \\\hline
-Matteo Galvagni & Programmatore & 20 & TBD & TBD \\\hline
-Elia Scandaletti & Verificatore & 3 & TBD & TBD \\\hline
+Giovanni Cocco & Programmatore & 20 & 21 & +1 \\\hline
+Matteo Galvagni & Programmatore & 20 & 23 & +3 \\\hline
+Elia Scandaletti & Verificatore & 3 & 4 & +1 \\\hline
 \end{tabular}
 
 \paragraph{Presentazione Proof of Concept}
 Inizio: 01/01/2021\par
 Fine prevista: 10/02/2022\par
-Fine effettiva: TBD
+Fine effettiva: 09/02/2022
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Responsabile & 2 & 2.5 & 30\euro & 60\euro & 75\euro \\\hline
+Verificatore & 0.5 & 0.5 & 15\euro & 7.50\euro & 7.50\euro \\\hline
+Totale ore: & 2.5 & 3 & Totale costi: & 67.50\euro & 82.50\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & +0.5 & \multicolumn{2}{r|}{Differenza di costo:} & +15\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Matteo Galvagni & Responsabile & 2 & 2.5 & +0.5 \\\hline
+Giovanni Cocco & Verificatore & 0.5 & 0.5 & 0 \\\hline
+\end{tabular}
 
 \paragraph{Grafico di Gannt}
 Il grafico di Gannt può essere consultato al \underline{\href{https://docs.google.com/spreadsheets/d/e/2PACX-1vRd4970Fob6KlNwY1iV6bnHZXNl41F74utFkkc9ykuT1NUEGLnFcCd4rOHbXjW99ichDnkV3cEGCmWi/pubhtml?gid=1972921762}{seguente indirizzo}}.
