--- a/docs/interni/verbali/2022_02_16_E/2022_02_16_E.tex
+++ b/docs/interni/verbali/2022_02_16_E/2022_02_16_E.tex
@@ -10,7 +10,7 @@
 \setrevisori{Federico Marchi}
 \setdestuso{interno}
 \setdescrizione{
-Verbale dell'incontro del 16/02/2022 con l'azienda SyncLab. 
+Verbale dell'incontro del 16/02/2022 con l'azienda SyncLab.
 }
 
 \begin{document}
@@ -48,7 +48,7 @@ Verbale dell'incontro del 16/02/2022 con l'azienda SyncLab.
 Il proponente dichiara di aver letto alcuni paragrafi dei documenti che ritiene di qualità. Si impegna a leggerli completamente entro sera e a darci un feedback più dettagliato via mail entro la mattina del 17/02.
 
 \subsection{Presentazione PoC}
-Il PoC è stato presentato al proponente che l'ha approvato. Puntualizza la necessità di sviluppare per il prodotto finale di:
+Il PoC è stato presentato al proponente che l'ha approvato. È stata poi puntualizzata la necessità di:
 \begin{itemize}
 	\item sviluppare la parte di frontend;
 	\item dividere chiaramente la WebApp dell'acquirente da quella del venditore;
