--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -17,6 +17,7 @@ Questo documento serve a definire le metriche e i criteri di accettazione dei pr
 \addversione{0.0.1}{16/01/2021}{Elia Scandaletti}{Redazione}{Correzione indice di Gulpease.}
 \addversione{0.0.2}{16/01/2021}{Giovanni Cocco}{Redazione}{Migliorata la leggibilità.}
 \addversione{0.0.3}{04/02/2021}{Giovanni Cocco}{Redazione}{Stesura iniziale sezione software.}
+\addversione{0.0.4}{21/02/2021}{Giovanni Cocco}{Redazione}{Aggiunta dashboard al docuemento.}
 
 \begin{document}
 
@@ -64,10 +65,42 @@ I parametri saranno calcolati:
 	\item \textbf{Documenti esterni}: minimo 50.
 \end{itemize}
 
+\subsection{Stato attuale}
+\begin{tabular}{|l|l|}\hline
+	Data & Stato \\\hline
+	12/12/2021 & N/A \\\hline
+	22/1/2022 & Creati script per automatizzare il processo\\\hline
+	9/2/2022 & Raggiunta copertura 100\%\\\hline
+\end{tabular}
+
+\subsection{Aspettative di miglioramento}
+\begin{tabular}{|l|l|l|}\hline
+	Data & Obiettivo & Data realizzazione attesa \\\hline
+	30/11/2121 & Creare script per automatizzare il processo & 30/12/2021\\\hline
+	12/1/2022 & Copertura al 100\% & 30/1/2022\\\hline
+\end{tabular}
+
+
+
 \section{Software}
-\subsection{Test}
+\subsection{Requisiti minimi}
 Il sofware dovrà essere coperto almeno per l'80\% da test come richiesto dal proponente.\\\\
 A questo scopo saranno creati appositi test automatici per verificare la correttezza del prodotto al momento della PR.\\
 L'insieme dei test verrà usato per assicurarsi di non introdurre regression durante lo sviluppo.
+
+\subsection{Stato attuale}
+\begin{tabular}{|l|l|}\hline
+	Data & Stato \\\hline
+	4/2/2022 & Creato PoC di test per il server (jtest)\\\hline
+\end{tabular}
+
+\subsection{Aspettative di miglioramento}
+\begin{tabular}{|l|l|l|}\hline
+	Data & Obiettivo & Data realizzazione attesa \\\hline
+	20/1/2022 & Verificare la possibilità di test automatici del server & 7/2/2022\\\hline
+	13/2/2022 & Verificare la possibilità di test automatici del contratto & 5/3/2022\\\hline
+	13/2/2022 & Verificare la possibilità di test automatici del JS utente & 5/3/2022\\\hline
+\end{tabular}
+
 
 \end{document}
