--- a/docs/interni/verbali/2022_02_26_E/2022_02_26_E.tex
+++ b/docs/interni/verbali/2022_02_26_E/2022_02_26_E.tex
@@ -46,8 +46,13 @@ Invece di aspettare l'esito completo del RTB data la strettezza dei tempi si è 
 Finire la PB per 16 Marzo.
 
 \section{Piano di qualifica}
-Test i automatici con copertura 100\% su contratto (truffle), sever (jest), script (pytest) e WebApp
-
+Test i automatici con copertura 100\% su:
+\begin{itemize}
+	\item contratto (truffle);
+	\item sever (jest);
+	\item script (pytest);
+	\item WebApp (TBD).
+\end{itemize}
 \section{Manuale utente}
 Creare il manuale con tutte le interazione sia cliente che e-commerce.
 
