--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -31,7 +31,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 
 \makeversioni
 
-\section{Introduzone}
+\section{Introduzione}
 \subsection{Scopo del documento}
 Lo scopo del presente documento è definire procedure, strumenti e criteri di qualità al fine di stabilire un Way of Working. Ogni membro del gruppo sarà tenuto a rispettare le indicazioni qui presentate.
 
@@ -287,7 +287,7 @@ Per lo sviluppo del codice valgono le seguenti regole:
 	\item chi modifica il SW nella stessa PR modifica la documentazione: diagramma delle classi, di sequenza e lista metodi;
     \item eseguire i test automatici prima di creare la PR (no regression);
     \item se si inserisce codice assicurarsi che sia coperto da test;
-    \item nulla di implicito, sia per visibilità che per tipi;
+    \item non lasciare nulla di implicito, sia per visibilità che per tipi.
 \end{itemize}
 
 \section{Tracciamento dei progressi}
@@ -314,6 +314,5 @@ In caso un componente non possa presentarsi dovrà presentare un resoconto scrit
 
 Questo resoconto va consegnato \textbf{prima del meeting} in modo che sia possibile discutere con i presenti anche della parte di lavoro svolta dagli assenti.
 Gli assenti rimarranno aggiornati sullo stato di avanzamento consultando i verbali redatti in occasione di ogni incontro.
-
 
 \end{document}
