--- a/docs/interni/verbali/2022_02_26_I/2022_02_26_I.tex
+++ b/docs/interni/verbali/2022_02_26_I/2022_02_26_I.tex
@@ -34,64 +34,66 @@ Verbale dell'incontro del 26/02/2022
 
 \section{Ordine del giorno}
 \begin{enumerate}
-	\item programmazione PB;
+	\item Programmazione PB;
+	\item Varie ed eventuali.
 
 \end{enumerate}
 
 \section{Svolgimento}
-\section{Procedere alla fase successiva}
+Di seguito i punti discussi.
+\subsection{Procedere alla fase successiva}
 Invece di aspettare l'esito completo del RTB data la strettezza dei tempi si è deciso di procedere alla fase di PB già dopo il colloquio con Cardin.
 
-\section{Piano di progetto}
+\subsection{Piano di progetto}
 Finire la PB per 16 Marzo.
 
-\section{Piano di qualifica}
-Test i automatici con copertura 100\% su:
+\subsection{Piano di qualifica}
+Test automatici con copertura 100\% su:
 \begin{itemize}
 	\item contratto (truffle);
 	\item sever (jest);
 	\item script (pytest);
 	\item WebApp (TBD).
 \end{itemize}
-\section{Manuale utente}
-Creare il manuale con tutte le interazione sia cliente che e-commerce.
+\subsection{Manuale utente}
+Creare il manuale con tutte le interazioni sia  per il cliente che per l'e-commerce.
 
-\section{Smart contract}
+\subsection{Smart contract}
 \begin{itemize}
 \item Contattare pallare riguardo al refund;
 \item portare la copertura test al 100\%.
 \end{itemize}
 
-\section{Web app}
+\subsection{Web app}
 \begin{itemize}
 	\item Trovare una suite di test;
 	\item portare la copertura test al 100\%.
 \end{itemize}	
 
-\section{Specifiche architetturali}
+\subsection{Specifiche architetturali}
 \begin{itemize}
 	\item Completare il diagramma delle classi;
 	\item completare il diagramma di sequenza;
-	\item creare l'elenco dei metodi publici.
+	\item creare l'elenco dei metodi pubblici.
 \end{itemize}
 
-\section{Norme di progetto}
+\subsection{Norme di progetto}
 Aggiornare le norme di progetto:
 \begin{itemize}
 	\item chi modifica il SW nella stessa PR modifica la documentazione: diagramma delle classi, di sequenza e lista metodi;
     \item eseguire i test automatici prima di creare la PR (no regression);
     \item se si inserisce codice assicurarsi che sia coperto da test;
     \item nulla di implicito, sia per visibilità che per tipi;
-    \item cambio data riunioni settimanali, aggiornarsi settimana prossima a riguardo;
+    \item cambio giorno riunioni settimanali, aggiornarsi settimana prossima a riguardo.
 \end{itemize}
 \section{Impegni presi}
 Scadenza ultima: 05/03/2022
 \begin{itemize}
-	\item Alberto: Manuale cliente ed ecommerce;
+	\item Alberto: Manuale cliente ed e-commerce;
 	\item Elia: Test automatici WebApp;
 	\item Matteo: Test automatici Contratto;
 	\item Giovanni: Norme di progetto;
-	\item Federico: Manuale cliente ed ecommerce;
+	\item Federico: Manuale cliente ed e-commerce;
 	\item Raffaele: Specifiche architetturali;
 	\item Andrea: Piano di progetto, di qualifica.
 \end{itemize}
