Aggiunto parte PB piano progetto e qualifica

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -44,6 +44,13 @@ Prodotti necessari:
 \item Proof of Concept.
 \end{itemize}
 
+\paragraph{PB}
+Prodotti necessari:
+\begin{itemize}
+\item Specifica Architteturale;
+\item Manuale Utente;
+\end{itemize}
+
 
 \subsection{RTB}
 \paragraph{Analisi dei Requisiti}
@@ -177,6 +184,111 @@ Ruoli assegnati:\\[0.5em]
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
 Matteo Galvagni & Responsabile & 2 & 2.5 & +0.5 \\\hline
 Giovanni Cocco & Verificatore & 0.5 & 0.5 & 0 \\\hline
+\end{tabular}
+
+\subsection{PB}
+\paragraph{Piano di Progetto (PB)}
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Responsabile & 7 & ? & 30\euro & 210\euro & ?\euro \\\hline
+Verificatore & 1 & ? & 15\euro & 15\euro & ?\euro \\\hline
+Totale ore: & 8 & ? & Totale costi: & 225\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Andrea Volpe & Responsabile & 7 & ? & ? \\\hline
+Giovanni Cocco & Verificatore & 1 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Piano di Qualifica (PB)}
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Responsabile & 5 & ? & 30\euro & 150\euro & ?\euro \\\hline
+Verificatore & 1 & ? & 15\euro & 15\euro & ?\euro \\\hline
+Totale ore: & 6 & ? & Totale costi: & 165\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Andrea Volpe & Responsabile & 5 & ? & ? \\\hline
+Giovanni Cocco & Verificatore & 1 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Specifica Architteturale (PB)}
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Progettista & 20 & ? & 25\euro & 500\euro & ?\euro \\\hline
+Verificatore & 3 & ? & 15\euro & 45\euro & ?\euro \\\hline
+Totale ore: & 23 & ? & Totale costi: & 545\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Raffaele Oliviero & Progettista & 20 & ? & ? \\\hline
+Giovanni Cocco & Verificatore & 3 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Manuale Utente (PB)}
+Inizio: 26/02/2022\par
+Fine prevista: 05/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Progettista & 32 & ? & 25\euro & 800\euro & ?\euro \\\hline
+Verificatore & 3 & ? & 15\euro & 45\euro & ?\euro \\\hline
+Totale ore: & 35 & ? & Totale costi: & 845\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Alberto Nicoletti & Progettista & 16 & ? & ? \\\hline
+Federico Marchi & Progettista & 16 & ? & ? \\\hline
+Giovanni Cocco & Verificatore & 3 & ? & ? \\\hline
+\end{tabular}
+
+\paragraph{Test Automatici WebApp (PB)}
+Inizio: 26/02/2022\par
+Fine prevista: 02/03/2022\par
+Fine effettiva: TBD
+
+Ore richieste:\\[0.5em]
+\begin{tabular}{|l|l|l||l|l|l|l|}\hline
+Ruolo & Ore prev. & Ore eff. & Costi orari & Costi prev. & Costi eff.\\\hline
+Verificatore & 35 & ? & 15\euro & 525\euro & ?\euro \\\hline
+Totale ore: & 35 & ? & Totale costi: & 525\euro & ?\euro \\\hline
+\multicolumn{2}{|r|}{Differenza di ore:} & ? & \multicolumn{2}{r|}{Differenza di costo:} & ?\euro \\\hline
+\end{tabular}
+
+Ruoli assegnati:\\[0.5em]
+\begin{tabular}{|l|l|l|l|l|}\hline
+Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
+Elia Scandaletti & Verificatore & 35 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Grafico di Gannt}
