--- a/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
+++ b/docs/esterni/piano_di_qualifica/piano_di_qualifica.tex
@@ -1,5 +1,6 @@
 \documentclass[a4paper, 12pt]{article}
 \usepackage{amsmath}
+\usepackage{pbox}
 
 \newcommand{\templates}{../../template}
 \input{\templates/style}
@@ -98,8 +99,10 @@ L'insieme dei test verrà usato per assicurarsi di non introdurre regression dur
 \begin{tabular}{|l|l|l|}\hline
 	Data & Obiettivo & Data realizzazione attesa \\\hline
 	20/1/2022 & Verificare la possibilità di test automatici del server & 7/2/2022\\\hline
-	13/2/2022 & Verificare la possibilità di test automatici del contratto & 5/3/2022\\\hline
-	13/2/2022 & Verificare la possibilità di test automatici del JS utente & 5/3/2022\\\hline
+	13/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici del contratto\\ tramite truffle} & 5/3/2022\\\hline
+	13/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici del JS utente \\tramite jest} & ?\\\hline
+	13/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici dello script \\python tramite pytest} & ?\\\hline
+	13/2/2022 & \pbox{20cm}{Verificare la possibilità di test automatici della WebApp \\tramite ?} & 5/3/2022\\\hline
 \end{tabular}
 
 
