--- a/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
+++ b/docs/esterni/analisi_dei_requisiti/analisi_dei_requisiti.tex
@@ -380,6 +380,8 @@ RFO04 & Il venditore deve poter visualizzare nella webapp venditore, per ogni tr
 \hline
 RFO05 & Il venditore deve poter visualizzare nella webapp venditore, per ogni transazione, il QR Code da applicare sul pacco. & Obbligatorio & UC4.2 \\
 \hline
+RFO51 & La webapp venditore deve poter generare data una stringa un QR Code. & Obbligatorio & UC4.2 \\
+\hline
 RFO06 & Il venditore deve poter visualizzare nella webapp venditore, per ogni transazione, l'importo in dollari. & Obbligatorio & UC4.3 \\
 \hline
 RFO07 & Il venditore deve poter visualizzare nella webapp venditore, per ogni transazione, la scadenza della transazione. & Obbligatorio & UC4.4 \\
@@ -392,7 +394,7 @@ RFO39 & La persistenza deve poter associare a ogni transazione il suo blocco in 
 \hline
 RFO40 & La persistenza deve poter associare ad ogni blocco il proprio timestamp. & Obbligatorio & UC4.4 \\
 \hline
-RFO40 & La deve poter fornire i dati di una particolare transazione su richiesta del server. & Obbligatorio & UC4 \\
+RFO40 & La persistenza deve poter fornire i dati di una particolare transazione su richiesta del server. & Obbligatorio & UC4 \\
 \hline
 RFO08 & L'acquirente deve ricevere indietro la valuta bloccata con cui ha pagato per la transazione, quando la transazione scade. & Obbligatorio & Decisione interna, UC4.4 \\
 \hline
