Modificato verificatori PB

--- a/docs/esterni/piano_di_progetto/piano_di_progetto.tex
+++ b/docs/esterni/piano_di_progetto/piano_di_progetto.tex
@@ -205,7 +205,7 @@ Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
 Andrea Volpe & Responsabile & 7 & ? & ? \\\hline
-Giovanni Cocco & Verificatore & 1 & ? & ? \\\hline
+Elia Scandaletti & Verificatore & 1 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Piano di Qualifica (PB)}
@@ -226,7 +226,7 @@ Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
 Andrea Volpe & Responsabile & 5 & ? & ? \\\hline
-Giovanni Cocco & Verificatore & 1 & ? & ? \\\hline
+Elia Scandaletti & Verificatore & 1 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Specifica Architteturale (PB)}
@@ -247,7 +247,7 @@ Ruoli assegnati:\\[0.5em]
 \begin{tabular}{|l|l|l|l|l|}\hline
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
 Raffaele Oliviero & Progettista & 20 & ? & ? \\\hline
-Giovanni Cocco & Verificatore & 3 & ? & ? \\\hline
+Andrea Volpe & Verificatore & 3 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Manuale Utente (PB)}
@@ -269,7 +269,7 @@ Ruoli assegnati:\\[0.5em]
 Membro & Ruolo & Ore prev. & Ore eff. & Diff. ore \\\hline
 Alberto Nicoletti & Progettista & 16 & ? & ? \\\hline
 Federico Marchi & Progettista & 16 & ? & ? \\\hline
-Giovanni Cocco & Verificatore & 3 & ? & ? \\\hline
+Raffaele Oliviero & Verificatore & 3 & ? & ? \\\hline
 \end{tabular}
 
 \paragraph{Test Automatici WebApp (PB)}
